Google analytics setting added

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -49,6 +49,9 @@ html, body, #app {
 .random-refresh-buttons {
     margin-top: 5px;
 }
+.benefits {
+    text-align: center;
+}
 .benefits a {
     vertical-align: -webkit-baseline-middle;
 }
